<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

// Top bar

        <LinearLayout
            style="@style/top_bar">
            <LinearLayout
                style="@style/top_bar_side_element">
                <TextView
                    style="@style/top_bar_title_text"
                    android:text="@string/top_bar_left_title_text"/>
                <TextView
                    style="@style/top_bar_bottom_text"
                    android:text="@string/top_bar_bottom_left_text"/>
            </LinearLayout>
            
            <LinearLayout
                style="@style/top_bar_border">
            </LinearLayout>
            
            <LinearLayout
                style="@style/top_bar_middle_element">
                <TextView
                    style="@style/top_bar_title_text"
                    android:text="@string/top_bar_title_middle_text"/>
                <TextView
                    style="@style/top_bar_bottom_text"
                    android:text="@string/top_bar_bottom_middle_text"/>
            </LinearLayout>

            <LinearLayout
                style="@style/top_bar_border">
            </LinearLayout>

            <LinearLayout
                style="@style/top_bar_side_element">
                <TextView
                    style="@style/top_bar_title_text"
                    android:text="@string/top_bar_title_right_text"/>
                <TextView
                    style="@style/top_bar_bottom_text"
                    android:text="@string/top_bar_bottom_right_text"/>
            </LinearLayout>
        </LinearLayout>

// Mobile phone

        <LinearLayout
            style="@style/container">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>
            <LinearLayout
                style="@style/middle_container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/edit_text"
                        android:inputType="phone"
                        android:hint="@string/mobile_hint"
                        android:text="@string/mobile_temp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>
            <View
                style="@style/border_line"/>

// E-mail

        <LinearLayout
            style="@style/container">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>
            <LinearLayout
                style="@style/middle_container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email_et"
                        style="@style/edit_text"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint"
                        android:text="@string/email_temp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>
            <View
                style="@style/border_line"/>

// VK

        <LinearLayout
            style="@style/container">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk"/>
            <LinearLayout
                style="@style/middle_container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/edit_text"
                        android:inputType="textUri"
                        android:hint="@string/vk_hint"
                        android:text="@string/vk_temp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/border_line"/>

// Github

        <LinearLayout
            style="@style/container">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/git_icon"/>
            <LinearLayout
                style="@style/middle_container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/git_et"
                        style="@style/edit_text"
                        android:inputType="textUri"
                        android:hint="@string/git_hint"
                        android:text="@string/git_temp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/border_line"/>

// About

        <LinearLayout
            style="@style/container">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <LinearLayout
                style="@style/middle_container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/profile_et"
                        style="@style/edit_text"
                        android:hint="@string/about_hint"
                        android:text="@string/about_temp"
                        android:inputType="textMultiLine"
                        android:maxLines="3"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>

