<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/login_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/spacing_larger_72"
        android:layout_marginRight="@dimen/spacing_larger_72"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_mediate_28"
                android:paddingLeft="@dimen/spacing_mediate_28"
                android:paddingRight="@dimen/spacing_mediate_28">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/auth_title_login"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_normal_16"
                        android:enabled="true"
                        android:focusable="false"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint"
                        android:text="@string/email_temp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-condensed"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:inputType="textPassword"
                        android:hint="@string/auth_password_hint"
                        android:fontFamily="sans-serif-condensed"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mediate_28"
                android:paddingRight="@dimen/spacing_mediate_28">
                <Button
                    android:layout_width="@dimen/size_huge_128"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mediate_28"
                    android:background="@color/red"
                    android:text="@string/auth_title_login"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing_normal_16"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_forgotten_password"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing_mediate_28"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>